<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.cuongmai.myshoesize.MainActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/primary_text"
            />

        <android.support.design.widget.TabLayout
            android:id="@+id/shoes_tab"
            android:layout_below="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            app:tabIndicatorColor="@color/primary_text"
            android:background="@color/primary"
            android:minHeight="?attr/actionBarSize"
            app:tabGravity="fill"
            app:tabTextColor="@color/secondary_text"
            app:tabSelectedTextColor="@color/primary_text"
            android:elevation="4dp"
            />

        <LinearLayout
            android:id="@+id/chart_header"
            android:layout_below="@id/shoes_tab"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center_vertical"
            android:background="@color/primary"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:layout_weight="0.1"
                android:layout_gravity="center"
                android:src="@drawable/bookmark_white_filled"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:layout_weight="0.15"
                android:layout_gravity="center"
                android:src="@drawable/person_white"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.15"
                android:layout_height="wrap_content"
                android:text="@string/us"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.15"
                android:layout_height="wrap_content"
                android:text="@string/euro"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.15"
                android:layout_height="wrap_content"
                android:text="@string/uk"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.15"
                android:layout_height="wrap_content"
                android:text="@string/inches"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.15"
                android:layout_height="wrap_content"
                android:text="@string/cm"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                />

        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/shoe_pager"
            android:layout_below="@+id/chart_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

        />

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="[AD_UNIT_ID]">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>


</android.support.v4.widget.DrawerLayout>
